2007-07-23  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlcomposition.c:
	(get_new_seek_event): Added debugging
	(seek_handling): comments on a race issue to fix.
	(gnl_composition_event_handler): protect call to get_new_seek_event.
	(update_pipeline): Update seek events need to be flushing if not in
	PLAYING, else we will encounter deadlocks.
	(object_start_changed), (object_stop_changed),
	(object_priority_changed), (object_active_changed): If composition
	has changed, we set segment->start to segment_start in the same way
	we do when a segment has finished.

2007-07-02  Edward Hervey  <bilboed@bilboed.com>

	* gnl/gnlobject.c: (ghostpad_event_function):
	Don't forward QoS event upstreams until we properly implement the
	time-shifting.
	See bug #398453

2007-06-16  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (unblock_child_pads), (unblock_childs),
	(unlock_child_state), (lock_child_state),
	(gnl_composition_change_state), (object_pad_removed),
	(gnl_composition_add_object), (gnl_composition_remove_object):
	Unblock child source pads when the pads OR the elements are being
	removed.
	Also unblock those pads when going to READY/NULL.
	Lock the state of gnlobjects being added, else it screws up state
	changes of the composition.
	Properly unref items when using GstIterators.
	* gnl/gnloperation.c: (gnl_operation_class_init),
	(gnl_operation_finalize), (get_unused_static_sink_pad),
	(add_sink_pad):
	memleak fixes.
	* tests/check/common.h:
	* tests/check/simple.c: (GST_START_TEST):
	memleak fixes.

2007-06-15  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlsource.c: (ghost_seek_pad), (pad_blocked_cb):
	Let's stop using the main thread for other-thread processing and
	instead go the proper way and use yet-another-thread through
	g_thread_create().
	* gnl/gnlcomposition.c: (gnl_composition_handle_message):
	Add a FIXME/WARNING related to switching to g_thread_create regarding
	SEGMENT_DONE message handling. This requires a better look at than I