@@ -132,6 +132,24 @@ videotest_gnl_src (const gchar * name, guint64 start, gint64 duration, gint patt
 }
 
 static GstElement *
+videotest_gnl_src_full (const gchar * name, guint64 start, gint64 duration,
+			guint64 mediastart, gint64 mediaduration,
+			gint pattern, guint priority)
+{
+  GstElement * gnls;
+
+  gnls = videotest_gnl_src (name, start, duration, pattern, priority);
+  if (gnls) {
+    g_object_set (G_OBJECT (gnls),
+		  "media-start", mediastart,
+		  "media-duration", mediaduration,
+		  NULL);
+  }
+
+  return gnls;
+}
+
+static GstElement *
 videotest_in_bin_gnl_src (const gchar * name, guint64 start, gint64 duration, gint pattern, guint priority)
 {
   GstElement * gnlsource = NULL;
